--- a/IdentityServer4Templates/Properties/launchSettings.json
+++ b/IdentityServer4Templates/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:59535",
-      "sslPort": 44326
+      "applicationUrl": "http://localhost:31735",
+      "sslPort": 44347
     }
   },
   "profiles": {
-    "NoteBook": {
+    "IdentityServer4Templates": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:6001;http://localhost:6000",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
